--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="top"></div>
 
     <!-- Objective Section-->
-
+<div id="main-content">
     <section id="objective" class="container">
 
         <div id="duo_container">
@@ -337,7 +337,7 @@
             </svg>
         </a>
     </div>
-
+</div>
 </body>
 
 </html>
