--- a/index.html
+++ b/index.html
@@ -168,15 +168,17 @@
     </section><br>
     <hr>
 
+<!-- Skills -->
     <section id="my_skills">
         <h2 style="text-shadow: 2px 5px lightgray;">Skills</h2>
         <div style="clear:both;"></div>
 
         <div class="skills_section">
 
-            <button type="button" style="width: 125px;" onclick="listSkills()">Show Skills</button>
-            
-            <button type="button" style="width: 125px;" onclick="clearSkillsList()">Remove Skills</button>
+            <button type="button" style="width: 125px;" onclick="listSkills() ">Show list</button>
+            <button onclick="sortSkills()">Sort</button>
+
+            <button type="button" style="width: 125px;" onclick="clearSkillsList()">Clear list</button>
             <div id="skillsList"></div>
     </section>
     <!-- </div> -->
