--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <a class="topmenu" href="#objective">Objective</a>
             <!-- Add the links for Skills, Projects and Recommendation here -->
             <a class="topmenu" href="#qualifications">Qualifications</a>
+            <a class="topmenu" href="#my_skills">Skills</a>
             <a class="topmenu" href="#professional_experience">Professional Experience</a>
             <a class="topmenu" href="#education">Education</a>
         </div>
