--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <li>Processed double-entry General Ledger credits and debits, while conducting 3-way verifications to
                     ensure that the sume of these matches the company's assets.
                 </li>
-                <li>Conducted daily accounts reconciliations and worked on resolving any discrepancies.</li>
+                <li>Conducted daily accounts reconciliations and worked on resolving discrepancies.</li>
                 <li>Prepared cash funding and returns entries that ensured accurate cash disbursements and collections.
                 <li>Ordered currency for banking centers, remote ATMs, and commercial customers, maintaining accurate
                     records and reporting.</li>
