--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                 <p hidden><span class="skills">Creativity</span>.</p>
                 <p hidden><span class="skills">Collaboration</span>.</p>
                 <p hidden><span class="skills">Time management</span>.</p>
+                <p hidden><span class="skills">Web development</span>.</p>
             </div>
 
         </div>
