--- a/index.html
+++ b/index.html
@@ -40,13 +40,21 @@
                     href="https://www.linkedin.com/in/barbara-taylor-275a65207/">https://www.linkedin.com/in/barbara-taylor-275a65207/</a>
             </div>
         </div>
-        <div class="topdiv">
-            <a class="topmenu" href="#objective">Objective</a>
-            <!-- Add the links for Skills, Projects and Recommendation here -->
-            <a class="topmenu" href="#qualifications">Qualifications</a>
-            <a class="topmenu" href="#my_skills">Skills</a>
-            <a class="topmenu" href="#professional_experience">Professional Experience</a>
-            <a class="topmenu" href="#education">Education</a>
+
+        <div class="hamnav">
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger">
+            <div id="hamitems">
+                <a class="hamnav" href="#objective">Objective</a>
+                <a class="hamnav" href="#qualifications">Qualifications</a>
+                <a class="hamnav" href="#my_skills">Skills</a>
+                <a class="hamnav" href="#professional_experience">Professional Experience</a>
+                <a class="hamnav" href="#education">Education</a>
+                <!-- Add more menu items as needed -->
+            </div>
+
+
+
         </div>
 
     </nav><br>
@@ -168,6 +176,7 @@
                 <p hidden><span class="skills">Collaboration</span>.</p>
                 <p hidden><span class="skills">Time management</span>.</p>
                 <p hidden><span class="skills">Web development</span>.</p>
+                <p hidden><span class="skills">Data entry</span>.</p>
             </div>
 
         </div>
@@ -289,13 +298,9 @@
                 <li>Ensured that the branch was in balance and the daily work sent to the back-office location for
                     further
                     processing.</li>
-                <li>Utilized sales techniques to uncover customer needs and offered a full range of consumer and
-                    business
-                    products.</li>
-                <li>Supervised and coached the team members as required.</li>
-                <li>Utilized professional customer service standards while participating in telemarketing and other
-                    banking
-                    center calling initiatives.</li>
+                <li>Utilized sales techniques to uncover customer needs and offered a full range of consumer and business products.</li>
+                <li>Supervised and coached team members.</li>
+                <li>Utilized professional customer service standards while participating in banking center calling initiatives.</li>
             </ul>
         </div><br><br>
     </section><br><br><br>
@@ -314,7 +319,7 @@
                     <h3>Education and Professional Development:</h3>
                     <ul>
                         <li>Course Certificates in HTML, CSS, JavaScript, UI/UX Design, and Software Engineering from
-                            IBM/Coursera</li>
+                            IBM</li>
                         <li>Yellow Belt Certificate in Six Sigma Process Improvement Methodology from Linked Learning
                         </li>
                         <li>Certificates in Web Fundamentals and Python from Coding Dojo at Colorado University</li>
