--- a/index.html
+++ b/index.html
@@ -45,145 +45,39 @@
             <label for="hamburger">&#9776;</label>
             <input type="checkbox" id="hamburger">
             <div id="hamitems">
-                <a class="hamnav" href="#objective">Objective</a>
-                <a class="hamnav" href="#qualifications">Qualifications</a>
+                <a class="hamnav" href="#summary">Summary</a>
+
                 <a class="hamnav" href="#my_skills">Skills</a>
+                <a class="hamnav" href="#qualifications">Qualifications</a>
                 <a class="hamnav" href="#professional_experience">Professional Experience</a>
                 <a class="hamnav" href="#education">Education</a>
                 <!-- Add more menu items as needed -->
             </div>
 
-
-
         </div>
 
     </nav><br>
 
-    <div id="top"></div>
+    <!-- Summary-->
+    <section id="summary" class="container">
 
-    <!-- Objective Section-->
-    <section id="objective" class="container">
 
-        <div id="duo_container">
-            <div class="img_container">
+        <div class="img_container">
+            
+            <img id="profile_image" src="./html_finalprojimages/profile_pic.JPG" alt="profile picture"
+                style="width:440px">
 
-                <img id="profile_image" src="./html_finalprojimages/profile_pic.JPG" alt="profile picture"
-                    style="width:440px">
-
-                <div class="overlay">My Name is Barbara Taylor</div>
-
-                <!-- <img src="./html_finalprojimages/profile_pic.JPG" alt="profile picture" id="profile_image" /> -->
-
-            </div>
-
-            <div class="objective_duo">
-                <h1 style="text-shadow: 2px 7px lightgray;">
-                    Objective
-                </h1><br>
-                <p>
-                    <span class="skills">Detail-oriented</span>, <span class="skills">problem solver</span>, <span
-                        class="skills">quick learner</span>, and <span class="skills">results-driven</span> professional
-                    with experience
-                    in
-                    <span class="skills">process documentation</span>, <span class="skills">technical
-                        communication</span>, double-entry <span class="skills">bookkeeping</span>, and <span
-                        class="skills">account
-                        reconciliation</span>.
-                    <br>
-                    Seeking a challenging role in technical writing with an organization where I can leverage my
-                    skills
-                    and
-                    expertise in <span class="skills"></span>process mapping and <span class="skills"></span>stakeholder
-                    engagement to create clear and concise <span class="skills"> technical documentation</span>.
-                    Committed to delivering high-quality deliverables that enhance <span class="skills"> operational
-                        efficiency</span>.
-                    <br>
-                    Alternatively, while communicating my <span class="skills">versatility</span>, I am seeking a role
-                    in Accounts
-                    Payable/Receivable to
-                    conduct account reconciliations and double-entry bookkeeping, practicing 3-way match, and
-                    processing
-                    payments to vendors.
-                </p>
-
-            </div>
+            <div class="overlay">My Name is Barbara Taylor</div>
         </div>
-
-
-        <!-- <div id="image_choice">
-            <button onclick="document.getElementById('profile_image').src='./html_finalprojimages/profile_pic.JPG'"
-                alt="profile picture">Image
-                1</button>
-
-            <button
-                onclick="document.getElementById('profile_image').src='./html_finalprojimages/profile_pic2.png'">Image
-                2</button>
-        </div> -->
-    </section><br><br><br>
-    <hr>
-
-    <!-- Qualifications -->
-    <section id="qualifications">
-        <h2 style="text-shadow: 2px 5px lightgray;">Qualifications</h2>
-        <div style="clear:both;"></div>
-
-        <div class="all_qualifications">
-            <div class="qualifications">
-                <!-- <img src="./html_finalprojimages/html5.png" /> -->
-                <p>Experienced Technical Writer with a strong background in process mapping, <span
-                        class="skills">business process analysis</span>,
-                    and <span class="skills">capturing current state environments</span>.</p>
-            </div>
-
-            <div class="qualifications">
-                <!-- <img src="./html_finalprojimages/java.png" /> -->
-                <p>Strong knowledge and experience in account reconciliation, balancing, General Ledger double-entry
-                    bookkeeping, and a 3-way match.
-                </p>
-            </div>
-            <div class="qualifications">
-                <!-- <img src="./html_finalprojimages/react.png" /> -->
-                <p>Familiarity with Microsoft Office Suite, including <spam class="skills">Visio, Excel, Outlook, Word,
-                        and PowerPoint</spam>.</p>
-            </div>
-            <div class="qualifications">
-                <p>Proficient in creating procedure manuals, flow charts, and graphs to effectively communicate
-                    technical information.</p>
-            </div>
-
-            <!-- Add more qualificationss here -->
-            <div class="qualifications">
-                <p>Skilled in collaboration, change management, and stakeholder analysis, with an <span class="skills">
-                        ability to work
-                        independently and prioritize tasks
-                    </span>.</li>
-            </div>
-
-            <div class="qualifications">
-                <!-- <img src="./html_finalprojimages/java.png" /> -->
-                <p>Contributed to process improvement initiatives while utilizing <span class="skills">Six Sigma Yellow
-                        Belt</span> Certification.
-                </p>
-            </div>
-
-            <div class="qualifications">
-                <!-- <img src="./html_finalprojimages/java.png" /> -->
-                <p>Knowledgeable in web development languages such as <spam class="skills">HTML, CSS, JavaScript,
-                        Python, Django, SQL</spam>, and
-                    <spam class="skills">WorldPress, Figma and Thunkable</spam> interfaces.
-                </p>
-                <p hidden><span class="skills">Creativity</span>.</p>
-                <p hidden><span class="skills">Collaboration</span>.</p>
-                <p hidden><span class="skills">Time management</span>.</p>
-                <p hidden><span class="skills">Web development</span>.</p>
-                <p hidden><span class="skills">Data entry</span>.</p>
-            </div>
-
+        <h2 style="text-shadow: 2px 5px lightgray;">Summary</h2>
+        <div>
+            <p>Dedicated professional with a strong background in banking operations and technical writing. Proficient
+                in accounts reconciliation, cash management, and process improvement methodologies. Skilled in creating
+                clear and concise technical documentation. Knowledgeable in web development while aiming towards creating responsive websites. Excellent interpersonal and communication skills, adaptable
+                to fast-paced environments, and a collaborative team player.</p>
         </div>
-
-    </section><br>
+    </section>
     <hr>
-
     <!-- Skills -->
     <section id="my_skills">
         <h2 style="text-shadow: 2px 5px lightgray;">Skills</h2>
@@ -197,7 +91,99 @@
         </div>
     </section>
 
+    <!-- <div class="objective_duo">
+                <h1 style="text-shadow: 2px 7px lightgray;">
+                    Objective
+                </h1><br>
+                <p>
+                    <span class="skills">Detail-oriented</span>, <span class="skills">problem solver</span>, <span
+                        class="skills">quick learner</span>, and <span class="skills">results-driven</span> professional
+                    with experience
+                    in process documentation, <span class="skills">technical
+                        communication</span>, double-entry bookkeeping, and account
+                        reconciliation.
+                    Seeking a challenging role in technical writing with an organization where I can leverage my
+                    skills and expertise in process mapping and stakeholder engagement to create clear and concise technical documentatio.
+                    Committed to delivering high-quality deliverables that enhance <span class="skills"> operational efficiency</span>.
+                    <br>
+                    Alternatively, while communicating my <span class="skills">versatility</span>, I am seeking a role
+                    in Accounts Payable/Receivable to conduct account reconciliations and double-entry bookkeeping, practicing 3-way match, and processing payments to vendors.
+                </p>
+
+            </div> -->
+
+
+    </section><br><br><br>
     <hr>
+
+    <!-- Qualifications -->
+    <section id="qualifications">
+        <h2 style="text-shadow: 2px 5px lightgray;">Qualifications</h2>
+        <div style="clear:both;"></div>
+
+        <div class="all_qualifications">
+            <div class="qualifications">
+                <!-- <img src="./html_finalprojimages/html5.png" /> -->
+                <p>Experienced Technical Writer with a strong background in process mapping, business process analysis,
+                    and capturing current state environments.</p>
+            </div>
+
+            <div class="qualifications">
+                <!-- <img src="./html_finalprojimages/java.png" /> -->
+                <p>Strong knowledge and experience in account reconciliation, balancing, and General Ledger.
+                </p>
+            </div>
+            <div class="qualifications">
+                <!-- <img src="./html_finalprojimages/react.png" /> -->
+                <p>Familiarity with Microsoft Office Suite, including Visio, Excel, Outlook, Word, and PowerPoint.</p>
+            </div>
+            <div class="qualifications">
+                <p>Proficient in creating procedure manuals, flow charts, and graphs to effectively communicate
+                    technical information.</p>
+            </div>
+
+            <!-- Add more qualificationss here -->
+            <div class="qualifications">
+                <p>Skilled in collaboration, change management, and stakeholder analysis, with an <span
+                        class="skills">ability to work
+                        independently</span> and prioritize tasks.</li>
+            </div>
+
+            <div class="qualifications">
+                <!-- <img src="./html_finalprojimages/java.png" /> -->
+                <p>Contributed to process improvement initiatives while utilizing Six Sigma Yellow Belt Certification.
+                </p>
+            </div>
+
+            <div class="qualifications">
+                <!-- <img src="./html_finalprojimages/java.png" /> -->
+                <p>Knowledgeable in web development languages such as HTML, CSS, JavaScript, Python, Django, SQL, and
+                    WorldPress, Figma and Thunkable interfaces.
+                </p>
+                <p hidden><span class="skills">Creativity</span>.</p>
+                <p hidden><span class="skills">Collaboration</span>.</p>
+                <p hidden><span class="skills">Time management</span>.</p>
+                <p hidden><span class="skills">Adaptability to change</span>.</p>
+                <p hidden><span class="skills">Strong problem solving</span>.</p>
+                <p hidden><span class="skills">Attention to detail</span>.</p>
+                <p hidden><span class="skills">Business acumen</span>.</p>
+                <p hidden><span class="skills">Resiliency</span>.</p>
+                <p hidden><span class="skills">Computer programming skills</span>.</p>
+                <p hidden><span class="skills">Empathy</span>.</p>
+                <p hidden><span class="skills">Computer literate</span>.</p>
+                <p hidden><span class="skills">Emotional intelligence</span>.</p>
+                <p hidden><span class="skills">Customer experience</span>.</p>
+                <p hidden><span class="skills">Analytical skills</span>.</p>
+                <p hidden><span class="skills">Prioritization</span>.</p>
+                <p hidden><span class="skills">Financial management skills</span>.</p>
+            </div>
+
+        </div>
+
+    </section><br>
+    <hr>
+
+
     <!-- Professional Experience -->
     <section id="professional_experience">
         <h2 style="text-shadow: 2px 5px lightgray;">Professional Experience</h2>
@@ -248,7 +234,7 @@
                 <li>Managed remote cash inventories and monitored insurance cash levels, ensuring banking compliance.
                 </li>
                 <li>Processed double-entry General Ledger credits and debits, while conducting 3-way verifications to
-                    ensure that the sume of these matches the company's assets.
+                    ensure that the sum of these matches the company's assets.
                 </li>
                 <li>Conducted daily accounts reconciliations and worked on resolving discrepancies.</li>
                 <li>Prepared cash funding and returns entries that ensured accurate cash disbursements and collections.
@@ -298,9 +284,11 @@
                 <li>Ensured that the branch was in balance and the daily work sent to the back-office location for
                     further
                     processing.</li>
-                <li>Utilized sales techniques to uncover customer needs and offered a full range of consumer and business products.</li>
+                <li>Utilized sales techniques to uncover customer needs and offered a full range of consumer and
+                    business products.</li>
                 <li>Supervised and coached team members.</li>
-                <li>Utilized professional customer service standards while participating in banking center calling initiatives.</li>
+                <li>Utilized professional customer service standards while participating in banking center calling
+                    initiatives.</li>
             </ul>
         </div><br><br>
     </section><br><br><br>
