--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Barbara Taylor Resume</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style1.css" />
     <script src="./script.js"></script>
 </head>
 
