--- a/index.html
+++ b/index.html
@@ -242,10 +242,11 @@
         <div style="clear:both;"></div>
         <br>
         <div class="bg">
-            <div id="education-container" class="education-container">
+            <!-- <div id="education-container" class="education-container"> -->
                 <div class="education-card">
                     <h3>Education and Professional Development:</h3>
                     <ul>
+                        <li>Currently enrolled in Tally Bookkeeper Professional Certificate, including Principles of Accounts Payable and Receivable Management from Coursera.</li>
                         <li>Course Certificates in HTML, CSS, JavaScript, UI/UX Design, and Software Engineering from
                             IBM</li>
                         <li>Yellow Belt Certificate in Six Sigma Process Improvement Methodology from Linked Learning
@@ -256,7 +257,7 @@
                         <li>High School Diploma</li>
                     </ul>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </section>
     <div style="clear:both;"></div><br><br><br>
