--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img id="profile_image" src="./html_finalprojimages/profile_pic.JPG" alt="profile picture">
                 <div class="overlay">My Name is Barbara Taylor</div>
             </div>
-            <h2 style="text-shadow: 2px 5px lightgray;">Summary</h2>
+            <h2>Summary</h2>
             <div>
                 <p>Dedicated professional with a strong background in banking operations and technical writing.
                     Proficient in accounts reconciliation, cash management, and process improvement methodologies.
@@ -65,14 +65,14 @@
                     to fast-paced environments, and a collaborative team player.</p>
             </div>
     </section>
-    <hr id="sumhr" style="margin-top: 60px;">
+    <hr>
     <!-- Skills -->
     <section id="my_skills">
-        <h2 style="text-shadow: 2px 5px lightgray;">Skills</h2>
+        <h2>Skills</h2>
         <div style="clear:both;"></div>
         <div class="skills_section">
-            <button type="button" style="width: 125px;" onclick="showAndSortSkills()">Show list</button>
-            <button type="button" style="width: 125px;" onclick="clearSkillsList()">Clear list</button>
+            <button type="button" onclick="showAndSortSkills()">Show list</button>
+            <button type="button" onclick="clearSkillsList()">Clear list</button>
             <div id="skillsList"></div>
         </div>
     </section><br><br><br>
