--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 </div>
                 <div style="clear:both;"></div>
                 <div class="contact_info">
-                    <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope">Cell:
+                    <img src="html_finalprojimages/phone.png"
+                        alt="https://icons8.com/icon/124377/circled-envelope">Cell:
                     (959)222-9734
                 </div>
                 <div class="contact_info">
@@ -44,26 +45,26 @@
                 <a class="hamnav" href="#summary">Summary</a>
                 <a class="hamnav" href="#my_skills">Skills</a>
                 <a class="hamnav" href="#qualifications">Qualifications</a>
-                <a class="hamnav" href="#professional_experience" >Professional Experience</a>
+                <a class="hamnav" href="#professional_experience">Professional Experience</a>
                 <a class="hamnav" href="#education">Education</a>
             </div>
         </div>
     </nav>
     <!-- Summary-->
     <section id="summary" class="container">
-            <div class="img_container">
-                <img id="profile_image" src="./html_finalprojimages/profile_pic.JPG" alt="profile picture">
-                <div class="overlay">My Name is Barbara Taylor</div>
-            </div>
-            <h2>Summary</h2>
-            <div>
-                <p>Dedicated professional with a strong background in banking operations and technical writing.
-                    Proficient in accounts reconciliation, cash management, and process improvement methodologies.
-                    Skilled in creating
-                    clear and concise technical documentation. Knowledgeable in web development while aiming towards
-                    creating responsive websites. Excellent interpersonal and communication skills, adaptable
-                    to fast-paced environments, and a collaborative team player.</p>
-            </div>
+        <div class="img_container">
+            <img id="profile_image" src="./html_finalprojimages/profile_pic.JPG" alt="profile picture">
+            <div class="overlay">My Name is Barbara Taylor</div>
+        </div>
+        <h2>Summary</h2>
+        <div>
+            <p>Dedicated professional with a strong background in banking operations and technical writing.
+                Proficient in accounts reconciliation, cash management, and process improvement methodologies.
+                Skilled in creating
+                clear and concise technical documentation. Knowledgeable in web development while aiming towards
+                creating responsive websites. Excellent interpersonal and communication skills, adaptable
+                to fast-paced environments, and a collaborative team player.</p>
+        </div>
     </section>
     <hr>
     <!-- Skills -->
@@ -76,6 +77,23 @@
             <div id="skillsList"></div>
         </div>
     </section><br><br><br>
+    <!-- Hidden skills -->
+    <p hidden><span class="skills">Creativity</span>.</p>
+    <p hidden><span class="skills">Collaboration</span>.</p>
+    <p hidden><span class="skills">Time management</span>.</p>
+    <p hidden><span class="skills">Adaptability to change</span>.</p>
+    <p hidden><span class="skills">Strong problem solving</span>.</p>
+    <p hidden><span class="skills">Attention to detail</span>.</p>
+    <p hidden><span class="skills">Business acumen</span>.</p>
+    <p hidden><span class="skills">Resiliency</span>.</p>
+    <p hidden><span class="skills">Computer programming skills (including developing this website)</span>.</p>
+    <p hidden><span class="skills">Empathy</span>.</p>
+    <p hidden><span class="skills">Computer literate</span>.</p>
+    <p hidden><span class="skills">Emotional intelligence</span>.</p>
+    <p hidden><span class="skills">Customer experience</span>.</p>
+    <p hidden><span class="skills">Analytical skills</span>.</p>
+    <p hidden><span class="skills">Prioritization</span>.</p>
+    <p hidden><span class="skills">Financial management skills</span>.</p>
     <hr id="skillshr">
     <!-- Qualifications -->
     <section id="qualifications">
@@ -107,24 +125,9 @@
                 </p>
             </div>
             <div class="qualifications">
-                <p>Knowledgeable in web development languages including HTML, CSS, JavaScript, Python, Django, SQL, and WorldPress, Figma and Thunkable interfaces.
+                <p>Knowledgeable in web development languages including HTML, CSS, JavaScript, Python, Django, SQL, and
+                    WorldPress, Figma and Thunkable interfaces.
                 </p>
-                <p hidden><span class="skills">Creativity</span>.</p>
-                <p hidden><span class="skills">Collaboration</span>.</p>
-                <p hidden><span class="skills">Time management</span>.</p>
-                <p hidden><span class="skills">Adaptability to change</span>.</p>
-                <p hidden><span class="skills">Strong problem solving</span>.</p>
-                <p hidden><span class="skills">Attention to detail</span>.</p>
-                <p hidden><span class="skills">Business acumen</span>.</p>
-                <p hidden><span class="skills">Resiliency</span>.</p>
-                <p hidden><span class="skills">Computer programming skills (including developing this website)</span>.</p>
-                <p hidden><span class="skills">Empathy</span>.</p>
-                <p hidden><span class="skills">Computer literate</span>.</p>
-                <p hidden><span class="skills">Emotional intelligence</span>.</p>
-                <p hidden><span class="skills">Customer experience</span>.</p>
-                <p hidden><span class="skills">Analytical skills</span>.</p>
-                <p hidden><span class="skills">Prioritization</span>.</p>
-                <p hidden><span class="skills">Financial management skills</span>.</p>
             </div>
         </div>
     </section><br>
@@ -243,20 +246,21 @@
         <br>
         <div class="bg">
             <!-- <div id="education-container" class="education-container"> -->
-                <div class="education-card">
-                    <h3>Education and Professional Development:</h3>
-                    <ul>
-                        <li>Currently enrolled in Tally Bookkeeper Professional Certificate, including Principles of Accounts Payable and Receivable Management from Coursera.</li>
-                        <li>Course Certificates in HTML, CSS, JavaScript, UI/UX Design, and Software Engineering from
-                            IBM</li>
-                        <li>Yellow Belt Certificate in Six Sigma Process Improvement Methodology from Linked Learning
-                        </li>
-                        <li>Certificates in Web Fundamentals and Python from Coding Dojo at Colorado University</li>
-                        <li>Diploma in Microcomputer Specialist/General Business Studies from Data Institute Business
-                            School, East Hartford, CT</li>
-                        <li>High School Diploma</li>
-                    </ul>
-                </div>
+            <div class="education-card">
+                <h3>Education and Professional Development:</h3>
+                <ul>
+                    <li>Currently enrolled in Tally Bookkeeper Professional Certificate, including Principles of
+                        Accounts Payable and Receivable Management from Coursera.</li>
+                    <li>Course Certificates in HTML, CSS, JavaScript, UI/UX Design, and Software Engineering from
+                        IBM</li>
+                    <li>Yellow Belt Certificate in Six Sigma Process Improvement Methodology from Linked Learning
+                    </li>
+                    <li>Certificates in Web Fundamentals and Python from Coding Dojo at Colorado University</li>
+                    <li>Diploma in Microcomputer Specialist/General Business Studies from Data Institute Business
+                        School, East Hartford, CT</li>
+                    <li>High School Diploma</li>
+                </ul>
+            </div>
             <!-- </div> -->
         </div>
     </section>
@@ -271,9 +275,10 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white"
                 width="63px">
                 <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                    d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
         </a>
     </div>
 </body>
+
 </html>
