--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     </section><br><br><br>
     <!-- Hidden skills -->
     <p hidden><span class="skills">Creativity</span>.</p>
+    <p hidden><span class="skills">Agility</span>.</p>
     <p hidden><span class="skills">Collaboration</span>.</p>
     <p hidden><span class="skills">Time management</span>.</p>
     <p hidden><span class="skills">Adaptability to change</span>.</p>
