--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <li>Diploma, Data Institute Business School, East Hartford, CT</li>
                     <li>High School Diploma</li>
                 </ul>
-                <h3>Courses</h3>
+                <h3>Courses and Certifications</h3>
                 <ul>
                     <li>Introduction to Financial Accounting, University of Pennsylvania &#10020;
                         May 2024 — Present &#10020;</li>
