--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
         </div>
         <h2>Summary</h2>
         <div>
-            <p>Dedicated professional with a strong background in banking operations and technical writing.
-                Proficient in accounts reconciliation, cash management, and process improvement methodologies.
-                Skilled in creating
-                clear and concise technical documentation. Knowledgeable in web development while aiming towards
-                creating responsive websites. Excellent interpersonal and communication skills, adaptable
-                to fast-paced environments, and a collaborative team player.</p>
+            <p>Dedicated professional with extensive experience in account reconciliations, cash 
+                management, office operations, and technical writing. Skilled in providing excellent 
+                customer service, effective communication, and analytical abilities. Versed in web 
+                development with a focus on designing responsive websites. Outstanding interpersonal 
+                and communication abilities, thrives in dynamic settings, and excels in teamwork. Highly 
+                skilled in the Microsoft Office suite, encompassing Visio, Excel, Word, PowerPoint, and 
+                Outlook.</p>
         </div>
     </section>
     <hr>
