--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         March 2024 — March 2024 &#10020;</li>
                     <li>Introduction to HTML, CSS, & JavaScript, IBM &#10020;
                         March 2024 — March 2024 &#10020;</li>
-                    <li>Six Sigma Yellow Belt, Linked Learning &#10020;
+                    <li>Six Sigma Yellow Belt, LinkedIn Learning &#10020;
                         June 2022 — June 2022 &#10020;</li>
                     <li>Python, Coding Dojo at Colorado University &#10020;
                         May 2021 — February 2022 &#10020;</li>
