--- a/index.html
+++ b/index.html
@@ -72,17 +72,9 @@
             <li>Collaborated closely with managers, subject-matter experts and process owners to develop
                 accurate and
                 visually engaging diagrams showcasing process functions.</li>
-            <li>Collaborated closely with the Director of Business Operations to ensure seamless operational
-                efficiency
-                and excellence.</li>
-            <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in
-                operational costs and increased productivity.</li>
-            <li>Developed personal websites using various programming languages, demonstrating proficiency in
-                software
-                development.</li>
-            <li>Implemented responsive design techniques, ensuring seamless user experience across various
-                devices and
-                platforms.</li>
+            <li>Collaborated closely with the Director of Business Operations during the department re-engineering and ensured operational efficiency and excellence.</li>
+            <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in operational costs and increased productivity.</li>
+            <li>Developed personal websites using responsive design techniques ensuring seamless user experience across various devices and platforms, and demonstrating proficiency in software development.</li>
         </ul>
     </div>
 </section>
