--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </div>
     </section><br><br><br>
     <!-- Hidden skills -->
+    <p hidden><span class="skills">Quick learner</span>.</p>
     <p hidden><span class="skills">Creativity</span>.</p>
     <p hidden><span class="skills">Agility</span>.</p>
     <p hidden><span class="skills">Collaboration</span>.</p>
