--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li>Collaborated closely with managers, subject-matter experts and process owners to develop
                 accurate and
                 visually engaging diagrams showcasing process functions.</li>
-            <li>Collaborated closely with the Director of Business Operations during the department re-engineering and ensured operational efficiency and excellence.</li>
+            <li>Collaborated closely with the Director of Business Operations during the department re-engineering process and this contributed to operational efficiency and excellence.</li>
             <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in operational costs and increased productivity.</li>
             <li>Developed personal websites using responsive design techniques ensuring seamless user experience across various devices and platforms, and demonstrating proficiency in software development.</li>
         </ul>
@@ -91,7 +91,6 @@
         </div>
     </section><br><br><br>
     <!-- Hidden skills -->
-    <p hidden><span class="skills">Quick learner</span>.</p>
     <p hidden><span class="skills">Creativity</span>.</p>
     <p hidden><span class="skills">Agility</span>.</p>
     <p hidden><span class="skills">Collaboration</span>.</p>
@@ -173,7 +172,7 @@
             </ul>
         </div><br><br>
         <div class="professional_experience"><br><br>
-            <h6>Electronic Funds Transfer (EFT) Conversion Specialist</h6>
+            <h6>Electronic Funds Transfer (EFT) Conversion Specialist, Corporate Operations</h6>
             <h6 class="professional_experience_text">Liberty Bank, Middletown, CT
                 October 2021 – April 2022
             </h6><br>
@@ -187,7 +186,7 @@
             </ul>
         </div><br><br>
         <div class="professional_experience"><br><br>
-            <h6>Sr. Deposit Operations Coordinator</h6>
+            <h6>Sr. Deposit Operations Coordinator, Corporate Operations</h6>
             <h6 class="professional_experience_text">Webster Bank, New Britain, CT
                 February 2018 – April 2021
             </h6><br>
@@ -208,7 +207,7 @@
             </ul>
         </div><br><br>
         <div class="professional_experience"><br><br>
-            <h6>Post-Closing Loan Servicer</h6>
+            <h6>Post-Closing Loan Servicer, Corporate Operations</h6>
             <h6 class="professional_experience_text">Webster Bank, New Britain, CT
                 April 2014 – September 2018
             </h6><br>
