--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <h2>Profile</h2>
         <div>
-            <p>Dedicated professional with a broad background in account reconciliations, cash management, technical writing, and office operations,. Proficient in delivering superior customer service, engaging in effective communication, and demonstrating strong analytical skills. Experienced in web development, specializing in the creation of responsive websites. Possesses exceptional interpersonal skills, flourishes in dynamic environments, and is adept at working collaboratively. Highly proficient with the Microsoft Office suite, including Visio, Excel, Word, PowerPoint, Teams, and Outlook.</p>
+            <p>Dedicated professional with a broad background in account reconciliations, cash management, technical writing, and office operations. Proficient in delivering superior customer service, engaging in effective communication, and demonstrating strong analytical skills. Experienced in web development, specializing in the creation of responsive websites. Possesses exceptional interpersonal skills, flourishes in dynamic environments, and is adept at working collaboratively. Highly proficient with the Microsoft Office suite, including Visio, Excel, Word, PowerPoint, Teams, and Outlook.</p>
         </div>
     </section>
     <hr>
