--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h2>Achievements</h2>
     <div class="achievements">
         <ul>
-            <li>Managed account reconciliations and general ledger entries during the system and vendor conversion process. My expertise allowed me to successfully resolve all complex balancing issues, ensuring the smooth progression of the conversion, and I was the sole individual in the department capable of achieving this.</li>
+            <li>Managed account reconciliations and general ledger entries during the system and vendor conversion process. My expertise allowed me to successfully resolve all complex balancing issues, ensuring the smooth progression of the conversion.</li>
             <li>Collaborated closely with managers, subject-matter experts and process owners to develop
                 accurate and
                 visually engaging diagrams showcasing process functions.</li>
