--- a/index.html
+++ b/index.html
@@ -68,14 +68,16 @@
     <h2>Achievements</h2>
     <div class="achievements">
         <ul>
-            <li>Managed account reconciliations and general ledger entries during the system and vendor conversion process. My expertise allowed me to successfully resolve all complex balancing issues, ensuring the smooth progression of the conversion.</li>
+            <li>Managed account reconciliations and general ledger entries during the system and vendor conversion process. My expertise allowed me to successfully resolve all complex balancing issues, ensuring the smooth progression of the conversion, and I was the sole individual in the department capable of achieving this.</li>
             <li>Collaborated closely with managers, subject-matter experts and process owners to develop
                 accurate and
                 visually engaging diagrams showcasing process functions.</li>
             <li>Collaborated closely with the Director of Business Operations during the department re-engineering process and this contributed to operational efficiency and excellence.</li>
             <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in operational costs and increased productivity.</li>
-            <li>Developed personal websites using responsive design techniques ensuring seamless user experience across various devices and platforms, and demonstrating proficiency in software development.</li>
+            <li>Developed personal websites using responsive design techniques ensuring seamless user experience across various devices and platforms, and demonstrating proficiency in software development. Examples: <a href="https://bashataylor.github.io/Mobille_weather_app/">Mobile Wheather App</a>, <a href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
+            </li>
         </ul>
+
     </div>
 </section>
 <hr>
