--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
                         March 2024 — March 2024 &#10020;</li>
                     <li>Introduction to HTML, CSS, & JavaScript, IBM &#10020;
                         March 2024 — March 2024 &#10020;</li>
+                        <li>SQL Essential Training, LinkedIn Learning &#10020;
+                            March 20, 2023 &#10020;</li>
                     <li>Six Sigma Yellow Belt, LinkedIn Learning &#10020;
                         June 2022 — June 2022 &#10020;</li>
                     <li>Python, Coding Dojo at Colorado University &#10020;
