--- a/index.html
+++ b/index.html
@@ -274,9 +274,13 @@
                         March 2024 — March 2024 &#10020;</li>
                     <li>Introduction to HTML, CSS, & JavaScript, IBM &#10020;
                         March 2024 — March 2024 &#10020;</li>
-                        <li>SQL Essential Training, LinkedIn Learning &#10020;
-                            March 20, 2023 &#10020;</li>
+                    <li>SQL Essential Training, LinkedIn Learning &#10020;
+                        March 20, 2023 &#10020;</li>
+                    <li>Get Ready for Generative AI, LinkedIn Learning &#10020;
+                        Feb 20, 2023 &#10020;</li>    
                     <li>Six Sigma Yellow Belt, LinkedIn Learning &#10020;
+                        June 2022 — June 2022 &#10020;</li>
+                    <li>Visio 2021 Essential Training (Office 2021/LTSC), LinkedIn Learning &#10020;
                         June 2022 — June 2022 &#10020;</li>
                     <li>Python, Coding Dojo at Colorado University &#10020;
                         May 2021 — February 2022 &#10020;</li>
