--- a/index.html
+++ b/index.html
@@ -214,35 +214,38 @@
                 April 2014 – September 2018
             </h6><br>
             <ul>
-                <li>Reviewed and processed outstanding documentation for consumer loans with high accuracy rate.</li>
-                <li>Reviewed daily imaged documents against OnBase system and updated Power Lender.</li>
-                <li>Prepared investor documents and supplied monthly reports.</li>
-                <li>Functioned as a point of contact between attorneys and customers to obtain missing documentation.
-                </li>
-                <li>Finalized processing documents such as title policies, unrecorded mortgages, recorded mortgages, and
-                    other required documentation.</li>
-            </ul>
-        </div><br><br>
-        <div class="professional_experience"><br><br>
-            <h6>Senior teller, Teller II, Teller I</h6>
-            <h6 class="professional_experience_text">Webster Bank, New Britain, CT
-                November 1993 – April 2014
-            </h6><br>
-            <ul>
-                <li>Greeted customers and fulfilled their requests by processing a variety of transactions, including
-                    deposits, withdrawals, check cashing, issuing bank checks, savings bonds, credit card advances,
-                    accurately and efficiently.</li>
-                <li>Collected and verified customer demographic information to assure accurate new account opening.</li>
-                <li>Closed and funded consumer loans according to the established guidelines.</li>
-                <li>Ensured that the branch was in balance and the daily work sent to the back-office location for
-                    further
-                    processing.</li>
-                <li>Utilized sales techniques to uncover customer needs and offered a full range of consumer and
-                    business products.</li>
-                <li>Supervised and coached team members.</li>
-                <li>Utilized professional customer service standards while participating in banking center calling
-                    initiatives.</li>
-            </ul>
+                    <li>Introduction to Financial Accounting, University of Pennsylvania &#10020;
+                        May 2024 — Present &#10020;</li>
+                    <li>Sage 300 Construction and Real Estate – Foundations (Construction edition), Sage
+                        University &#10020;
+                        April 2024 — April 2024 &#10020;</li>
+                    <li>Designing User Interfaces and Experiences (UI/UX), IBM &#10020;
+                        March 2024 — March 2024 &#10020;</li>
+                    <li>Getting Started with Front-End and Web Development, IBM &#10020;
+                        March 2024 — March 2024 &#10020;</li>
+                    <li>Introduction to Software Engineering, IBM &#10020;
+                        March 2024 — March 2024 &#10020;</li>
+                    <li>Introduction to HTML, CSS, & JavaScript, IBM &#10020;
+                        March 2024 — March 2024 &#10020;</li>
+                    <li>SQL Essential Training, LinkedIn Learning &#10020;
+                        March 20, 2023 &#10020;</li>
+                    <li>Get Ready for Generative AI, LinkedIn Learning &#10020;
+                        Feb 20, 2023 &#10020;</li>
+                    <li>Ten Habits of Mentally Strong People, LinkedIn Learning &#10020;
+                        Nov 4 2022 &#10020;</li>
+                    <li>Six Sigma Yellow Belt, LinkedIn Learning &#10020;
+                        June 2022 — June 2022 &#10020;</li>
+                    <li>Visio 2021 Essential Training (Office 2021/LTSC), LinkedIn Learning &#10020;
+                        June 2022 — June 2022 &#10020;</li>
+                    <li>Root Cause Analysis: Getting to the Root of Business Problems, LinkedIn Learning &#10020;
+                        June 6, 2022 &#10020;</li>
+                    <li>Statistics Foundations 1: The Basics, LinkedIn Learning &#10020;
+                        June 2, 2022 &#10020;</li>
+                    <li>Python, Coding Dojo at Colorado University &#10020;
+                        May 2021 — February 2022 &#10020;</li>
+                    <li>Web Fundamentals, Coding Dojo at Colorado University &#10020;
+                        May 2021 — February 2022 &#10020;</li>
+                </ul>
         </div><br><br>
     </section><br><br><br>
     <hr>
